WIP: Geo points and arrays and object arrays are evil